--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ events{
 http {
     upstream frontend{
 
-        server mainfram:80;
+        server mainframe:80;
 
     }
     upstream backend{
