--- a/mainframe/package.json
+++ b/mainframe/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^14.1.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "dotenv": "^16.0.3",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -36,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "~4.7.2"
   }
 }
