--- a/mainframe/package.json
+++ b/mainframe/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "angular-cli-ghpages": "^1.0.5",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "dotenv": "^16.0.3",
